<resources>
    <string name="app_name">F1 Team</string>

    <string name="teams_name">F1 Team</string>
    <string name="description">Deskripsi</string>
    <string name="in_profile">In Profile</string>
    <string name="detail_full_name">Full Team Name</string>
    <string name="detail_base">Base</string>
    <string name="detail_team_chief">Team Chief</string>
    <string name="detail_chassis">Chassis</string>
    <string name="detail_power_unit">Power Unit</string>
    <string name="detail_first_team_entry">First Team Entry</string>
    <string name="detail_champion">World Championships</string>
    <string name="list">List</string>
    <string name="grid">Grid</string>
    <string name="about_name">Nessafitri</string>
    <string name="about_email">nessafitri16@gmail.com</string>
    <string-array name="data_name">
        <item>Alfa Romeo</item>
        <item>Alpha Tauri</item>
        <item>Alphine</item>
        <item>Aston Martin</item>
        <item>Ferrari</item>
        <item>Haas</item>
        <item>McLaren</item>
        <item>Mercedes</item>
        <item>Redbull</item>
        <item>Williams</item>
    </string-array>
    <string-array name="data_description">
        <item>The name Alfa Romeo boasts Formula 1 connections dating back to the championship\’s inception in 1950. Fast forward to the 21st century and Italian flare combines with Swiss sensibilities in a new era for the team formerly known as Sauber. Having enjoyed considerable success in world sportscars, where he helped nurture the emerging talents of future F1 stars Michael Schumacher and Heinz-Harald Frentzen, Peter Sauber guided his eponymous squad into F1 in 1993. The team has since established itself as a mainstay of the grid, becoming race winners under BMW\’s brief ownership, and developing a well-earned reputation not only for producing competitive cars, but also for developing young drivers.</item>
        <item>Established in 2006 as a squad in which young drivers from Red Bull\’s prodigious talent pool could cut their F1 teeth, AlphaTauri – originally named Toro Rosso – were formed from the ashes of the plucky Minardi team. Sebastian Vettel gave validity to the approach almost immediately, delivering a fairy-tale win in 2008, before going on to enjoy world championship success with parent team Red Bull Racing. Today the ethos of nurturing talent still holds true, though the Italian squad are no longer simply a \‘B team\’ but a constructor in their own right.</item>
        <item>Alpine may be a relatively new name to Formula 1, but Renault\’s famous sportscar arm has plenty of motorsport heritage. The 2021 rebrand of the team marked the next step in Renault\’s F1 revival, begun in 2016 with the takeover of the then-Lotus squad. Already race winners in their new guise, regular podiums and a tilt at the title must be their next target.</item>
        <item>Aston Martin\’s original Formula 1 foray – over half a century ago – lasted just five races. This time, though, it\’s serious. This F1 squad are no strangers to success, having won in their original guise of Jordan and most recently as Racing Point in 2020. Renowned for their ability to punch above their weight, and now with a two-time champion leading their driver line-up, Aston Martin are very much a team to watch.</item>
        <item>For many, Ferrari and Formula 1 racing have become inseparable. The only team to have competed in every season since the world championship began, the Prancing Horse has grown from the humble dream of founder Enzo Ferrari to become one of the most iconic and recognised brands in the world. Success came quickly through the likes of Alberto Ascari and John Surtees, and continued – in amongst leaner times – with Niki Lauda in the 1970s and then Michael Schumacher in the 2000s, when Ferrari claimed a then unprecedented five consecutive title doubles, securing their status as the most successful and decorated team in F1 history.</item>
        <item>The youngest team on the grid, Haas made their highly impressive debut in 2016, and in the process became the first all-American-led F1 squad in three decades. Founded by industrialist Gene Haas, they are based in the United States on the same Kannapolis, North Carolina facility as his championship-winning NASCAR Sprint Cup Series team, Stewart-Haas Racing. The Ferrari-powered team, led by the charismatic Guenther Steiner, also have a UK factory in Banbury.</item>
        <item>Since entering the sport in 1966 under the guidance and restless endeavour of eponymous founder Bruce, McLaren\'s success has been nothing short of breathtaking. Five glittering decades have yielded countless victories, pole positions and podiums, not to mention eight constructors\' championships. What\'s more, some of the sport\'s greatest drivers made their names with the team, including Emerson Fittipaldi, Ayrton Senna, Mika Hakkinen and Lewis Hamilton.</item>
        <item>Mercedes\’ modern F1 revival started with the creation of a works squad for 2010 - the platform for a meteoric rise up the Grand Prix order. The team generated huge excitement from the off with the sensational return of Michael Schumacher, but headlines soon followed on track: three podiums in their debut season, all via Nico Rosberg - who then claimed a breakthrough pole/victory double at China in 2012. The following season he was paired with Lewis Hamilton, the duo going on to stage some epic title battles as the Silver Arrows swept all before them to become one of the most dominant forces of the modern F1 era. And with Hamilton now partnered by the up-and-coming George Russell, Mercedes remain very much the team that everyone wants to beat.</item>
        <item>Red Bull were no strangers to F1 - as sponsors - prior to formally entering as a works team in 2004. Nonetheless, the scale of their success over the following decade was staggering. After a first podium in 2006, the team hit their stride in 2009, claiming six victories and second in the constructors\' standings. Over the next four seasons they were a tour de force, claiming consecutive title doubles between 2010 and 2013, with Sebastian Vettel emerging as the sport\'s youngest quadruple champion. Now they are recapturing that glory with an equally exciting talent – one named Max Verstappen.</item>
        <item>Driven on by the brilliance and passion of the late Sir Frank Williams, Williams grew from humble beginnings to become a Formula 1 behemoth, unrivalled by all except Ferrari and McLaren in terms of enduring success. Over the past four decades the team has racked up Grand Prix wins and championship glory, and in the process nurtured some of the greatest talents in the sport, both in and out the cockpit. And, following the Williams family\'s decision to step aside after the 2020 sale of the team to Dorilton Capital, a new era has begun.</item>
    </string-array>
    <integer-array name="data_photo">
        <item>@drawable/alfa_romeo</item>
        <item>@drawable/alpha_tauri</item>
        <item>@drawable/alpine</item>
        <item>@drawable/aston_martin</item>
        <item>@drawable/ferrari</item>
        <item>@drawable/haas</item>
        <item>@drawable/mclaren</item>
        <item>@drawable/mercedes</item>
        <item>@drawable/redbull</item>
        <item>@drawable/williams</item>
    </integer-array>
    <string-array name="data_full_name">
        <item>Alfa Romeo F1 Team Stake</item>
        <item>Scuderia AlphaTauri</item>
        <item>BWT Alpine F1 Team</item>
        <item>Aston Martin Aramco Cognizant Formula One</item>
        <item>Scuderia Ferrari</item>
        <item>MoneyGram Haas F1 Team</item>
        <item>McLaren Formula 1 Team</item>
        <item>Mercedes-AMG PETRONAS Formula One Team</item>
        <item>Oracle Red Bull Racing</item>
        <item>Williams Racing</item>
    </string-array>
    <string-array name="data_base">
        <item>Hinwil, Switzerland</item>
        <item>Faenza, Italy</item>
        <item>Enstone, United Kingdom</item>
        <item>Silverstone, United Kingdom</item>
        <item>Maranello, Italy</item>
        <item>Kannapolis, United States</item>
        <item>Woking, United Kingdom</item>
        <item>Brackley, United Kingdom</item>
        <item>Milton Keynes, United Kingdom</item>
        <item>Grove, United Kingdom</item>
    </string-array>
    <string-array name="data_team_chief">
        <item>Alessandro Alunni Bravi</item>
        <item>Franz Tost</item>
        <item>Otmar Szafnauer</item>
        <item>Mike Krack</item>
        <item>Frédéric Vasseur</item>
        <item>Guenther Steiner</item>
        <item>Andrea Stella</item>
        <item>Toto Wolff</item>
        <item>Christian Horner</item>
        <item>James Vowles</item>
    </string-array>
    <string-array name="data_chassis">
        <item>C43</item>
        <item>AT04</item>
        <item>A523</item>
        <item>AMR23</item>
        <item>SF-23</item>
        <item>VF-23</item>
        <item>MCL60</item>
        <item>W14</item>
        <item>RB19</item>
        <item>TBC</item>
    </string-array>
    <string-array name="data_power_unit">
        <item>Ferrari</item>
        <item>Honda RBPT</item>
        <item>Renault</item>
        <item>Mercedes</item>
        <item>Ferrari</item>
        <item>Ferrari</item>
        <item>Mercedes</item>
        <item>Mercedes</item>
        <item>Honda RBPT</item>
        <item>Mercedes</item>
    </string-array>
    <string-array name="data_first_team_entry">
        <item>1993</item>
        <item>1985</item>
        <item>1986</item>
        <item>2018</item>
        <item>1950</item>
        <item>2016</item>
        <item>1966</item>
        <item>1970</item>
        <item>1997</item>
        <item>1978</item>
    </string-array>
    <string-array name="data_world_championt">
        <item>N/A</item>
        <item>N/A</item>
        <item>2</item>
        <item>N/A</item>
        <item>16</item>
        <item>N/A</item>
        <item>8</item>
        <item>8</item>
        <item>5</item>
        <item>9</item>
    </string-array>
</resources>